Handle sections as ToC, take 1

--- a/layouts/docs/list.html
+++ b/layouts/docs/list.html
@@ -1,4 +1,17 @@
 {{ define "content" }}
-    {{ partial "docs/browse.html" . }}
+    {{/* partial "docs/browse.html" . */}}
+    {{ if ge (len .Pages) 1 }}
+    {{ $page := index .Pages 0 }}
+    {{ $page.Content }}
+    {{ end }}
 {{ end }}
 
+
+{{ define "side-menu" }}
+<div id="docsToc">
+        <div class="pi-accordion">
+          {{ partial "tree.html" . }}
+        </div> <!-- /pi-accordion -->
+    <button class="push-menu-close-button" onclick="kub.toggleToc()"></button>
+  </div> <!-- /docsToc -->
+{{ end }}
